# rust-microservice

./: .env.sample  Cargo.toml  Makefile  Makefile.db.mk  movine.toml
migrations/2021-02-15-134308_create_table_users/: up.sql
src/: main.rs
src/domain/user/: mod.rs  user.rs
src/infra/repository/: db.rs  mod.rs  repository.rs  user_repository.rs
src/rest/: mod.rs
