[package]
name = "rust-sqlx"
version = "0.1.0"
authors = ["alextanhongpin <alextan220990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std + native-tls
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "chrono", "json"] }
async-std = { version = "1.6", features = [ "attributes" ] }
chrono = "0.4"
