[package]
name = "rust-sqlx"
version = "0.1.0"
authors = ["alextanhongpin <alextan220990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
chrono = "0.4"
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0.38"
async-trait = "0.1.51"
